# phymes

./: CONTRIBUTING.md  README.md
.github/actions/hf-model-cache/: action.yaml
.github/workflows/: README.md  phymes.yml
phymes-agents/: Cargo.toml
phymes-agents/benches/: chat.rs  chatagent.rs  docrag.rs
phymes-agents/examples/cache/: run_main.rs
phymes-agents/examples/chat/: run_main.rs
phymes-agents/examples/chatagent/: run_main.rs
phymes-agents/src/candle_assets/: candle_asset.rs  candle_which.rs
phymes-agents/src/candle_chat/: chat_processor.rs
phymes-agents/src/candle_embed/: embed_processor.rs  mod.rs
phymes-agents/src/candle_models/: mod.rs
phymes-agents/src/session_plans/: available_session_plans.rs  chat_agent_session.rs  document_rag_session.rs  tool_agent_session.rs
phymes-app/: Cargo.toml  Dioxus.toml  index.html
phymes-app/assets/: main.css  manifest.json  sw.js
phymes-app/src/: main.rs
phymes-app/src/state/: mod.rs
phymes-app/src/ui/: backend.rs  main_window.rs  messaging.rs  metrics.rs  settings.rs  sign_in.rs  subjects.rs  svg_icons.rs  tasks.rs
phymes-book/src/phymes-agents/: rag_agent.md
phymes-core/: Cargo.toml
phymes-core/src/session/: session_context.rs
phymes-server/: Cargo.toml
phymes-server/src/: main.rs
phymes-server/src/handlers/: session_info.rs  session_state.rs  session_stream.rs
phymes-server/src/server/: serverless_app.rs  serverless_config.rs
