[package]
name = "phymes-app"
version = "0.1.0"
authors = ["Douglas McCloskey"]
# DM: updating to 2024 causes many "error[E0716]: temporary value dropped while borrowed"
#  when using dioxus `use_memo`
edition = "2021"
description = "Front-end UI for PHYMES"
license = "MIT AND Apache-2.0"
repository = "https://github.com/biom8er/phymes"
documentation = "https://docs.rs/phymes-app"

[dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.3" }
# DM: the "fullstack" feature MUST be specified here as the default and not activated as a feature
#      or the server will not be built using `dx`
#dioxus = { version = "0.6.3", features = ["fullstack"] }
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json", "stream"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
bytes = "1.10.0"
serde_json = "1.0.140"
plotly = { version = "0.13.3", default-features = false, optional = true}
phymes-core = { path = "../phymes-core", default-features = false }
phymes-server = { path = "../phymes-server", default-features = false }
clap = {version = "4.5.40", optional = true}
tokio = { version = "1.45.1", default-features = false, optional = true }

[features]
default = ["web"]

# Frontend options for plotting
plotly_cdn_js = ["dep:plotly"]
plotly_embed_js = ["plotly/plotly_embed_js"]

# Serverside options for gpu and token/tensor services
wasip2 = ["phymes-server/wasip2", "phymes-core/wasip2"]
wsl = ["phymes-server/wsl", "phymes-core/wsl"]
gpu = ["phymes-server/gpu"]
candle = ["phymes-server/candle"]
hf_hub = ["phymes-server/hf_hub"]
openai_api = ["phymes-server/openai_api"]
# DM: this is a work in progress because we need to access
#     resources on the device while in the browser context
serverless = [] # Switch to use the serverless application

# Dioxus platform options
web = ["dioxus/web", "plotly_cdn_js", "wasip2"]
desktop = ["dioxus/desktop", "dioxus/launch", "plotly_embed_js", "wasip2"]
mobile = ["dioxus/mobile", "plotly_embed_js", "wasip2"]
# DM: Dioxus builds the server for native and not for the "target" platform e.g., mobile, desktop, etc.
# see https://dioxuslabs.com/learn/0.6/guide/bundle/
server = ["wsl", "candle", "clap/derive", "tokio/full"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"